update future shopping